Gap was removed | Margin for img was fixed.

--- a/src/styles/blocks/card.css
+++ b/src/styles/blocks/card.css
@@ -12,13 +12,11 @@
   box-sizing: border-box;
 }
 
-.card__img-wrap {
-  margin-bottom: 40px;
-  padding: 0 3px;
-}
-
 .card__img {
-  max-width: 100%;
+  height: 134px;
+  width: 160px;
+  margin: 0 auto 40px;
+  display: block;
 }
 
 .card__box {
