--- a/src/styles/blocks/stars.css
+++ b/src/styles/blocks/stars.css
@@ -1,12 +1,15 @@
 .stars {
   display: flex;
-  gap: 4px;
 }
 
 .stars__star {
   width: 16px;
   height: 16px;
   background: url(../../images/star.svg) no-repeat center;
+}
+
+.stars__star:not(:first-child) {
+  margin-left: 4px;
 }
 
 .stars--1 .stars__star:nth-child(-n + 1),
